hphp/hack/test/sound_dynamic/typing/set_create.bad.php.exp
File "set_create.bad.php", line 4, characters 3-14:
Some elements in this collection are incompatible (Typing[4110])
  File "set_create.bad.php", line 4, characters 7-9:
  Expected `int`
  File "set_create.bad.php", line 3, characters 12-18:
  But got `arraykey`
