hphp/hack/test/sound_dynamic/typing/set_create.bad.php
<?hh

function f(dynamic $d) : void {
  Set<int>{$d};
}
